add animate on scroll

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="bower/normalize.css/normalize.css" />
     <link rel="stylesheet" href="bower/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" href="bower/slick-carousel/slick/slick-theme.css" />
+    <link rel="stylesheet" href="bower/aos/dist/aos.css" />
     <!--endbuild-->
     <link rel="stylesheet" href="./css/style.css" />
 </head>
@@ -33,7 +34,7 @@
         <!-- В обертке .b-wrap-cont глобально подлючен шрифт "PT Sans" в файлах он не подлючается, для работы бери все что лежит внутри этого блока-->
         <div class="b-section">
             <div class="b-main-cont">
-                <div class="b-about">
+                <div class="b-about" data-aos="fade" data-aos-delay="400" data-aos-duration="1400">
                     <a class="b-about__el" href="#" style="background-image:url('img/item-1.jpg')">
                         <div class="b-filter"></div>
                         <div class="b-about__el-info">
@@ -61,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="b-order-wrap">
+        <div class="b-order-wrap" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">
             <div class="b-main-cont">
                 <div class="b-title b-title--white b-title--sm">Нужна помощь в подборе CRM?</div>
                 <div class="b-order">
@@ -83,8 +84,8 @@
         </div>
         <div class="b-section">
             <div class="b-main-cont">
-                <div class="b-title">Возможности для клиента</div>
-                <div class="b-advant">
+                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Возможности для клиента</div>
+                <div class="b-advant" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
                     <div class="b-advant__el">
                         <div class="b-advant__el-img">
                             <div class="b-advant__el-icon">
@@ -156,8 +157,8 @@
         </div>
         <div class="b-section b-section--gray">
             <div class="b-main-cont">
-                <div class="b-title">Наши продукты</div>
-                <div class="b-slider-wrap b-slider-wrap--simple">
+                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Наши продукты</div>
+                <div class="b-slider-wrap b-slider-wrap--simple" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
                     <div class="b-slider-control b-slider-control--left">
                         <img src="img/arrow-left.svg" alt="" />
                     </div>
@@ -255,9 +256,9 @@
         </div>
         <div class="b-section">
             <div class="b-main-cont">
-                <div class="b-title">Компания «BusinessUpgrade» —
+                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Компания «BusinessUpgrade» —
                     <br>это команда профессионалов своего дела!</div>
-                <div class="b-team">
+                <div class="b-team" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
                     <div class="b-team__el">
                         <div class="b-team__el-img">
                             <img src="img/analisis.svg" alt="" />
@@ -299,8 +300,8 @@
         </div>
         <div class="b-section b-section--gray">
             <div class="b-main-cont">
-                <div class="b-title">Наши клиенты</div>
-                <div class="b-slider-wrap b-slider-wrap--simple">
+                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Наши клиенты</div>
+                <div class="b-slider-wrap b-slider-wrap--simple" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
                     <div class="b-slider-control b-slider-control--left">
                         <img src="img/arrow-left.svg" alt="" />
                     </div>
@@ -356,8 +357,8 @@
         </div>
         <div class="b-section">
             <div class="b-main-cont">
-                <div class="b-title">Что мы вам готовы дать</div>
-                <div class="provide">
+                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Что мы вам готовы дать</div>
+                <div class="provide" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
                     <div class="provide__el">
                         <div class="provide__el-img">
                             <img src="img/control.png" alt="" />
@@ -436,6 +437,7 @@
     <script src="./js/jquery.js"></script>
     <!--build:js ./js/combined.js-->
     <script src="bower/slick-carousel/slick/slick.js"></script>
+    <script src="bower/aos/dist/aos.js"></script>
     <!-- endbuild-->
     <script src="./js/script.js"></script>
 </body>
