fix animation type

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="b-order-wrap" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">
+        <div class="b-order-wrap">
             <div class="b-main-cont">
                 <div class="b-title b-title--white b-title--sm">Нужна помощь в подборе CRM?</div>
                 <div class="b-order">
@@ -157,8 +157,8 @@
         </div>
         <div class="b-section b-section--gray">
             <div class="b-main-cont">
-                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Наши продукты</div>
-                <div class="b-slider-wrap b-slider-wrap--simple" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
+                <div class="b-title">Наши продукты</div>
+                <div class="b-slider-wrap b-slider-wrap--simple">
                     <div class="b-slider-control b-slider-control--left">
                         <img src="img/arrow-left.svg" alt="" />
                     </div>
@@ -300,8 +300,8 @@
         </div>
         <div class="b-section b-section--gray">
             <div class="b-main-cont">
-                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Наши клиенты</div>
-                <div class="b-slider-wrap b-slider-wrap--simple" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
+                <div class="b-title">Наши клиенты</div>
+                <div class="b-slider-wrap b-slider-wrap--simple">
                     <div class="b-slider-control b-slider-control--left">
                         <img src="img/arrow-left.svg" alt="" />
                     </div>
@@ -357,8 +357,8 @@
         </div>
         <div class="b-section">
             <div class="b-main-cont">
-                <div class="b-title" data-aos="fade-in" data-aos-delay="300" data-aos-duration="2000">Что мы вам готовы дать</div>
-                <div class="provide" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1500">
+                <div class="b-title">Что мы вам готовы дать</div>
+                <div class="provide">
                     <div class="provide__el">
                         <div class="provide__el-img">
                             <img src="img/control.png" alt="" />
